Rewrite qTest upload to the documented auto-test-logs JSON API
The multipart/JUnit-XML approach was wrong from the start - it caused every
HTTP 400. qTest's official "Batch Submit Test Logs" spec (Test Log APIs docs)
requires a completely different request:

- POST .../auto-test-logs?type=automation  (was ?type=junit)
- Content-Type: application/json           (was multipart/form-data)
- JSON body: { test_cycle, test_logs: [ { name, automation_content, status,
  exe_start_date, exe_end_date, module_names, attachments } ] }
- Extent report is embedded as a base64 attachments[] entry inside the JSON,
  not a separate blob-handles upload
- Response is async { id, state }; states are IN_WAITING/IN_PROCESSING/
  PENDING/FAILED/SUCCESS

Changes:
- Rewrite QTestUploader to build and POST the JSON payload from the live
  ITestContext results, with per-test automation_content fingerprints and
  PASSED/FAILED/SKIPPED dedup (passed wins for retried-then-passed tests)
- Embed the Extent HTML report as a base64 attachment on the first test log
- Poll the returned job via queue-processing until SUCCESS/FAILED
- Add required qtestTestCycle property (+ constant); skip with a clear error
  if it is blank, since the API mandates a parent Test Cycle
- Drop all the multipart/boundary/JUnit-XML/blob-handles machinery
- Verified via reflection: exe dates format as ISO-8601 with offset and no
  millis (matching the spec sample), and the payload serializes to the exact
  documented JSON shape
- Update README qTest sections and config reference to the JSON API

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018x3J83VAAreDPmh8odq2Lu